<resources>
    <string name="app_name">24Connect</string>
    <string name="need_an_account">Need a New Account ?</string>
    <string name="display_name">Display Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="log_out">Log Out</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="Login">LOGIN</string>
    <string name="your_email">Your Email</string>
    <string name="login">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="requests">REQUESTS</string>
</resources>
